Corrigido bugs na comunicação que provocavam travamento. Adicionado aba de calibração de sensores. Modificação do gráfico de forma a mostrar tensão e corrente rms e potência aparente.

--- a/BaseProject/BaseProject.vcxproj.filters
+++ b/BaseProject/BaseProject.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="Modules.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="AnalogSignals.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
